--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learning and mastering JavaScript",
   "main": "test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "npx prettier --write .",
+    "lint": "eslint . --fix --max-warnings=0"
   },
   "keywords": [
     "learning",
