--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Adam Cegielka",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
