--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "no-console": "off",
+    "no-alert": "off"
+  }
 }
