--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "3.1.1"
+  },
+  "dependencies": {
+    "react": "^18.2.0"
   }
 }
