chore: add new script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "test.js",
   "scripts": {
     "prettier": "npx prettier --write .",
-    "lint": "eslint . --fix --max-warnings=0"
+    "lint:check": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [
     "learning",
