--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\01_basics\\02-variables_let_const.js"
+            "program": "${workspaceFolder}\\01_basics\\00-debug_file.js"
         }
     ]
 }
