--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,16 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\01_basics\\00-debug_file.js"
+            "program": "${workspaceFolder}\\01_basics\\09-arrow_function.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Exercises",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}\\exercises\\001_exercise.js"
         }
     ]
 }
